what can deep tissue teat, cmto, rmtoa, fb, G+

--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -16,25 +16,69 @@
 
 
   <div class="row">
-  <!-- Testimonials -->
-  {% include home_page_testimonials.html %}
-  <!-- End Testimonials -->
+    <!-- Testimonials -->
+    {% include home_page_testimonials.html %}
+    <!-- End Testimonials -->
   </div>
 
 
   <!-- What is Deep Tissue... -->
   <div class="content-wrap notoppadding" >
     <div class="container clearfix">
-      <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
-        <h1>What is Deep Tissue Massage</h1>
-        <span>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.baseurl}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries.</span>
+      <div id="section-features" class="title-center nobottommargin topmargin toppadding">
+        <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/"><h1>What Can Deep Tissue Massage Treat?</h1></a>
       </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-  <!-- End What is Deep Tissue... --> 
+      <div class="col_one_third">
+        <div class="feature-box fbox-border fbox-effect">
+          <div class="fbox-icon">
+            <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i class="icon-hand-right i-alt"></i></a>
+          </div>
+          <h3>Back Pain</h3>
+          <ul class="iconlist iconlist-color nobottommargin">
+            <li><i class="icon-caret-right"></i> Degenerative Discs</li>
+            <li><i class="icon-caret-right"></i> Herniated Disc</li>
+            <li><i class="icon-caret-right"></i> Low Back Pain</li>
+            <li><i class="icon-caret-right"></i> Postural Disorders</li>
+          </ul>
+        </div>
+      </div>
 
-  <div class="clear"></div>  
+      <div class="col_one_third">
+        <div class="feature-box fbox-border fbox-effect">
+          <div class="fbox-icon">
+            <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i class="icon-dribbble2 i-alt"></i></a>
+          </div>
+          <h3>Sports Injuries</h3>
+          <ul class="iconlist iconlist-color nobottommargin">
+            <li><i class="icon-caret-right"></i> Sprains and Strains</li>
+            <li><i class="icon-caret-right"></i> Tendonitis</li>
+            <li><i class="icon-caret-right"></i> Frozen shoulder</li>
+            <li><i class="icon-caret-right"></i> Knee injury</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col_one_third col_last">
+        <div class="feature-box fbox-border fbox-effect">
+          <div class="fbox-icon">
+            <a href="{{site.baseurl}}/generalmassagetherapy/what-can-deep-tissue-massage-treat/#"><i class="icon-reorder i-alt"></i></a>
+          </div>
+          <h3>So Much More</h3>
+          <ul class="iconlist iconlist-color nobottommargin">
+            <li><i class="icon-caret-right"></i> Arthritis</li>
+            <li><i class="icon-caret-right"></i> Carpal Tunnel Syndrome</li>
+            <li><i class="icon-caret-right"></i> Headaches</li>
+            <li><i class="icon-caret-right"></i> Neck pain</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="clear"></div>
+  </div>
+</div>
+<!-- End What is Deep Tissue... --> 
+
+<div class="clear"></div>  
 
 </section>
 <!-- #content end -->
