--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -1,9 +1,9 @@
 <!-- Start Tabs -->
 
 <div class="container clearfix">             
-  <div class="tabs travel-organiser-tabs clearfix">
+  <div class="tabs travel-organiser-tabs clearfix topmargin">
   <!-- Tabs Nav-->
-    <ul class="tab-nav clearfix">
+    <ul class="tab-nav topmargin clearfix">
       <li><a href="#tab-welcome"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Welcome</span><i class="icon-comment2"></i></a></li>
       <li class="hidden-lg hidden-md"><a href="#tab-picture"><i class="icon-line-head"></i></a></li>
       <li><a href="#tab-hours"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Hours</span><i class="icon-table"></i></a></li>
