--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -12,7 +12,7 @@
     </ul>
     <!-- Tabs Nav -->
     <!-- Tabs -->
-    <div class="tab-container ">
+    <div class="tab-container">
 
       <div dir="lft" class="tab-content clearfix center" id="tab-welcome">
         <div class="heading-block nobottomborder bottommargin-sm clearfix">
@@ -30,7 +30,7 @@
       </div>
 
       <div class="tab-content clearfix center hidden-lg hidden-md" id="tab-picture">          
-        <img class="center" src="assets/images/img_video.png">
+        <img class="center" src="{{site.url}}/assets/images/img_video.png">
       </div>
 
       <div dir="lft" class="tab-content clearfix" id="tab-hours">
