--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -1,5 +1,5 @@
 <!-- <footer id="footer" class="dark"> -->
-<footer id="footer" class="dark" style="background: url('images/footer-bg.jpg'); background-size: 100% 100%;">
+<footer id="footer" class="dark" style="background: url('{{site.url}}/images/footer-bg.jpg'); background-size: 100% 100%;">
     <div class="container clearfix">
         <div class="footer-widgets-wrap">
 
@@ -34,17 +34,17 @@
             <div class="col_two_third col_last">
                 <div class="widget clearfix">
                     
-                    <img src="assets/images/Kitchener_massage_logo.png" alt="" class="alignleft" style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #4A4A4A;">
+                    <img src="{{site.url}}/assets/images/Kitchener_massage_logo.png" alt="" class="alignleft" style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #4A4A4A;">
                     <div class="line" style="margin: 30px 0;"></div>               
                     
                     <div class="col_one_third center">
                         <!-- CMTO Badge -->
-                        <a href="http://www.cmto.com/" target="_blank" class="widget_sp_image-image-link" title="College of Massage Therapists of Ontario"><img width="200" height="105" alt="College of Massage Therapists of Ontario" class="attachment-200x105" style="max-width: 100%;" src="{{site.baseurl}}/assets/images/cmto-logo.jpg"></a>
+                        <a href="http://www.cmto.com/" target="_blank" class="widget_sp_image-image-link" title="College of Massage Therapists of Ontario"><img width="200" height="105" alt="College of Massage Therapists of Ontario" class="attachment-200x105" style="max-width: 100%;" src="{{site.url}}/assets/images/cmto-logo.jpg"></a>
                     </div>
                     
                     <div style="margin-top: 7px" class="col_one_third center">  
                         <!-- RMTAO link -->
-                        <a href="http://www.rmtao.com/home" target="_blank" class="widget_sp_image-image-link" title="Registered Massage Therapists Association of Ontario"><img width="211" height="97" alt="Registered Massage Therapists Association of Ontario" class="attachment-full" style="max-width: 100%;" src="{{site.baseurl}}/assets/images/rmtao_logo_english_lead.gif"></a>
+                        <a href="http://www.rmtao.com/home" target="_blank" class="widget_sp_image-image-link" title="Registered Massage Therapists Association of Ontario"><img width="211" height="97" alt="Registered Massage Therapists Association of Ontario" class="attachment-full" style="max-width: 100%;" src="{{site.url}}/assets/images/rmtao_logo_english_lead.gif"></a>
                     </div>
                     
                     <div class="col_one_third col_last">
