--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,13 +7,26 @@
     <div id="wrapper" class="clearfix">
 
       {% include page_header.html %}
-      {% include page_content.html %}
+      
+<!-- Page Title
+    ============================================= -->
+    <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); padding: 80px 0;" data-stellar-background-ratio="0.3">
+
+      <div class="container clearfix">
+
+      {{content}}
+      </div>
+
+    </section><!-- #page-title end -->
+
+
+
       {% include page_footer.html %}
 
     </div>
     <!-- Footer Scripts
     ============================================= -->
-    <script type="text/javascript" src="js/functions.js"></script>
+    <script type="text/javascript" src="/js/functions.js"></script>
 
   </body>
 </html>
