page slider caption

--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -26,7 +26,7 @@
 
 
 <!-- Header Slider With Picture and tabs -->
-<section id="slider" class="slider-parallax full-screen " style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;" data-height-lg="600" data-height-md="500" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
+<section id="slider" class="slider-parallax full-screen with-header clearfix" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;" data-height-lg="600" data-height-md="500" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
   <div id="inline-block" >
 
     <!-- Picture -->
