--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@
     ============================================= -->
     <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); padding: 80px 0;" data-stellar-background-ratio="0.3">
 
-      <div class="container clearfix">
+      <div class="container slider-cation-right slider-caption-bg slider-caption-bg-light clearfix">
 
       {{content}}
       </div>
