--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,7 +1,7 @@
 <!-- Header
 ============================================= -->
-<header id="header" class="transparent-header" data-sticky-class="not-dark" data-responsive-class="not-dark">
-  <div id="header-wrap ">
+<header id="header" class="transparent-header" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') ; backgroung-repeat: no-repeat; background-size: cover;" data-sticky-class="not-dark" data-responsive-class="not-dark">
+  <div id="header-wrap">
     <div class="container clearfix">
 
       <div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
@@ -14,18 +14,13 @@
       <!-- #logo end -->
 
       <!-- Nagigation -->
-      {% include nav.html %}
+      {% include page_nav.html %}
       <!-- End Nagigation -->
 
     </div>
   </div>  
 </header>
 <!-- #header end -->
-
-
-
-
-
 
 <!-- Page Title
     ============================================= -->
