--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,21 +8,20 @@
 
       {% include page_header.html %}
       
-<!-- Page Title
+    <!-- Page Title and content
     ============================================= -->
     <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); padding: 80px 0;" data-stellar-background-ratio="0.3">
 
       <div class="container clearfix">
-
-      {{content}}
+        {{content}}
       </div>
 
-    </section><!-- #page-title end -->
+    </section>
+    <!-- #page-title and content end -->
 
-
-
-      {% include page_footer.html %}
-
+    <!-- Footer -->
+    {% include page_footer.html %}
+    <!-- Footer end -->
     </div>
     <!-- Footer Scripts
     ============================================= -->
