--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,15 +16,13 @@
         
         <!-- Left Col -->
         <div class="col_one_third noleftmargin nopadding slider-caption-bg slider-caption-bg-light">
-          {% include page_leftcol.html %}
+          <div class="topmargin">{% include page_leftcol.html %}</div>
         </div>
         <!-- Left Col Ends -->
 
         <!-- Right Col -->
         <div class="col_two_third norightmargin col_last slider-caption-bg slider-caption-bg-light">
-          
-          {{content}}
-          
+          <div class="topmargin">{{content}}</div>
         </div>
         <!-- Right Col Ends -->
       </div>
