exp with center

--- a/_includes/page_leftcol.html
+++ b/_includes/page_leftcol.html
@@ -1,5 +1,5 @@
 <!-- Hours -->
-<div  style="margin: 20px;">
+<div>
 	<h3>Hours</h3>
 	<div style="margin-right: 0px;" class="row">
 		<div style="margin-left: 25px; width: 70px;" class="col_half norightmargin inline-block">
@@ -26,7 +26,7 @@
 <!-- Hours End -->
 
 <!-- Rates -->
-<div style="margin: 20px;">
+<div>
 	<h3>Rates</h3>
 	<div style="margin-right: 0px;" class="row">
 		<div style="margin-left: 25px; width: 80px" class="col_half norightmargin inline-block">
