--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,18 +10,18 @@
       
     <!-- Page Title and content
     ============================================= -->
-    <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); padding: 80px 0;" data-stellar-background-ratio="0.3">
+    <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg');" data-stellar-background-ratio="0.3">
 
       <div class="container clearfix">
         
         <!-- Left Col -->
-        <div class="col_one_third noleftmargin nopadding slider-caption-bg slider-caption-bg-light">
+        <div class="col_one_third slider-caption-bg slider-caption-bg-light">
           <div class="topmargin">{% include page_leftcol.html %}</div>
         </div>
         <!-- Left Col Ends -->
 
         <!-- Right Col -->
-        <div class="col_two_third norightmargin col_last slider-caption-bg slider-caption-bg-light">
+        <div class="col_two_third col_last slider-caption-bg slider-caption-bg-light">
           <div class="topmargin">{{content}}</div>
         </div>
         <!-- Right Col Ends -->
