--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
-<html>
-  {% include head.html %}
-  <body>
-    {% include header.html %}
-    <div id="container">
-      <div id="container_top">
-        <div class="header_wrap">
-          {% include leftcol.html %}
-          {% include rightcol.html %}
+<html lang="en-US">
+  {% include page_head.html %}
+  <body class="stretched">
+  <!-- Document Wrapper
+    ============================================= -->
+    <div id="wrapper" class="clearfix">
+
+      {% include page_header.html %}
+      
+    <!-- Page Title and content
+    ============================================= -->
+    <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); padding: 80px 0;" data-stellar-background-ratio="0.3">
+
+      <div class="container clearfix">
+        
+        <!-- Left Col -->
+        <div class="col_one_third nopadding slider-caption-bg slider-caption-bg-light">
+          <div class="topmargin">{% include page_leftcol.html %}</div>
         </div>
+        <!-- Left Col Ends -->
+
+        <!-- Right Col -->
+        <div class="col_two_third col_last slider-caption-bg slider-caption-bg-light">
+          <div class="topmargin">{{content}}</div>
+        </div>
+        <!-- Right Col Ends -->
       </div>
+
+    </section>
+    <!-- #page-title and content end -->
+
+    <!-- Footer -->
+    {% include page_footer.html %}
+    <!-- Footer end -->
     </div>
-          {% include footer.html %}
+    <!-- Footer Scripts
+    ============================================= -->
+    <script type="text/javascript" src="/js/functions.js"></script>
+
   </body>
 </html>
