sorting out page center

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@
     ============================================= -->
     <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg');" data-stellar-background-ratio="0.3">
 
-      <div class="container clearfix">
+      <div class="container clearfix noleftmargin">
         
         <!-- Left Col -->
         <div class="col_one_third slider-caption-bg slider-caption-bg-light">
