posts, page header background on resize

--- a/_includes/home_page_testimonials.html
+++ b/_includes/home_page_testimonials.html
@@ -1,5 +1,5 @@
  <!-- Testamonials -->
-<div class="section parallax nomargin notopborder" style="background-image: url('assets/images/bg_body_mountain.jpg'); background-size: 1cover00%; padding: 100px 0;" data-stellar-background-ratio="0.3">
+<div class="section parallax nomargin notopborder" style="background-image: url('assets/images/bg_body_mountain.jpg'); background-size: 100%; padding: 100px 0;" data-stellar-background-ratio="0.3">
   <div class="container clearfix">
     <!-- Row 1 -->
     <div class="row">
