--- a/_includes/page_nav.html
+++ b/_includes/page_nav.html
@@ -1,6 +1,6 @@
 <!-- Primary Navigation
 ============================================= -->
-<nav id="primary-menu" class="style-6">
+<nav id="primary-menu" class="style-6 not-dark">
 
   <ul dir="rtl" class="one-page-menu" >
     <li><a href="{{site.baseurl}}/"><div>Home</div></a></li>
