--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -9,12 +9,12 @@
       <!-- Logo
       ============================================= -->
       <div id="logo">
-        <a href="index.html" class="standard-logo" data-dark-logo="{{site.url}}/assets/images/logo_kitchener_massage.png"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
+        <a href="/index.html" class="standard-logo"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
       </div>
       <!-- #logo end -->
 
       <!-- Nagigation -->
-      {% include home_page_nav.html %}
+      {% include page_nav.html %}
       <!-- End Nagigation -->
 
     </div>
