--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,6 +1,6 @@
 <!-- Header
 ============================================= -->
-<header id="header" class="transparent-header" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') ; backgroung-repeat: no-repeat; background-size: cover;" data-sticky-class="not-dark" data-responsive-class="not-dark">
+<header id="header" class="" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') ; backgroung-repeat: no-repeat; background-size: cover;" data-sticky-class="dark" data-responsive-class="dark">
   <div id="header-wrap">
     <div class="container clearfix">
 
@@ -9,7 +9,7 @@
       <!-- Logo
       ============================================= -->
       <div id="logo">
-        <a href="index.html" class="standard-logo" data-dark-logo="{{site.url}}/assets/images/logo_kitchener_massage.png"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
+        <a href="/index.html" class="standard-logo" data-dark-logo="{{site.url}}/assets/images/logo_kitchener_massage.png"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
       </div>
       <!-- #logo end -->
 
