--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,25 +10,46 @@
       
     <!-- Page Title and content
     ============================================= -->
-    <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); padding: 80px 0;" data-stellar-background-ratio="0.3">
+    <section id="content" class="" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); background-repeat: no-repeat; ">
+      <div class="content-wrap">
+        <div class="container clearfix notopmargin">
 
-      <div class="container clearfix">
-        
-        <!-- Left Col -->
-        <div class="col_one_third nopadding slider-caption-bg slider-caption-bg-light">
-          <div class="topmargin">{% include page_leftcol.html %}</div>
-        </div>
-        <!-- Left Col Ends -->
+          <!-- Right Col -->
+          <div class="postcontent nobottommargin col_last clearfix">
+            <div class="single-post nobottommargin slider-caption-bg slider-caption-bg-light">
+              <div class="entry clearfix">
+                <div class="entry-content notopmargin">
 
-        <!-- Right Col -->
-        <div class="col_two_third col_last slider-caption-bg slider-caption-bg-light">
-          <div class="topmargin">{{content}}</div>
+                  {{content}}
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Right Col Ends -->
+
+          <!-- Sidebar
+          ============================================= -->
+          <div class="sidebar nobottommargin clearfix">
+            <div class="sidebar-widgets-wrap slider-caption-bg slider-caption-bg-light">
+
+              <div class="widget clearfix">
+                {% if page.post_id == 7 %}
+                  {% include appointments_leftcol.html %}
+                {% else %}
+                  {% include page_leftcol.html%}                
+                {% endif %}
+              </div>
+
+            </div>
+          </div>
+          <!-- .sidebar end -->
+
         </div>
-        <!-- Right Col Ends -->
       </div>
-
     </section>
     <!-- #page-title and content end -->
+
 
     <!-- Footer -->
     {% include page_footer.html %}
