comma, omta/rmtao, fb/G+

--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -14,7 +14,7 @@
       <!-- #logo end -->
 
       <!-- Nagigation -->
-      {% include page_nav.html %}
+      {% include home_page_nav.html %}
       <!-- End Nagigation -->
 
     </div>
