--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,7 +1,7 @@
 <!-- Header
 ============================================= -->
-<header id="header" class="" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') ; backgroung-repeat: no-repeat; background-size: cover;" data-sticky-class="dark" data-responsive-class="dark">
-  <div id="header-wrap">
+<header id="header" class="" data-sticky-class="not-dark" data-responsive-class="not-dark" data-class-lg="header_background" data-class-md="header_background">
+  <div id="header-wrap" class="">
     <div class="container clearfix">
 
       <div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
