--- a/_includes/page_leftcol.html
+++ b/_includes/page_leftcol.html
@@ -1,19 +1,29 @@
 <!-- Hours -->
 <h3>Hours</h3>
 {% include timebox.html %}
-
-
 <!-- Hours End -->
 
 <!-- Rates -->
-
 <h3>Rates</h3>
 {% include ratebox.html %}
-
 <!-- Rates End -->
+
 <div class="clearfix"></div>
+
+
 <!-- Schedule Now Button -->
 <div>
 	<a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now"><button style="margin: 10px" class="btn btn-danger fright">Schedule Now</button></a>
 </div>
 <!-- Schedule Now Button Ends -->
+<div class="clearfix"></div>
+
+<!-- CMTO Logo -->
+<div class="testimonial bottommargin-sm">
+	<a href="http://www.cmto.com/" target="_blank" title="College of Massage Therapists of Ontario"><img alt="College of Massage Therapists of Ontario" class="attachment-200x105" style="max-width: 100%;" src="{{site.url}}/assets/images/cmto-logo.jpg"></a>
+</div>
+
+<!-- RMTAO Logo -->
+<div class="testimonial bottommargin-sm">
+	<a href="http://www.rmtao.com/home" target="_blank" class="widget_sp_image-image-link" title="Registered Massage Therapists Association of Ontario"><img alt="Registered Massage Therapists Association of Ontario" class="attachment-full" style="max-width: 100%;" src="{{site.url}}/assets/images/rmtao_logo_english_lead.gif"></a>
+</div>
