--- a/_includes/page_nav.html
+++ b/_includes/page_nav.html
@@ -2,7 +2,7 @@
 ============================================= -->
 <nav id="primary-menu" class="style-6 not-dark">
 
-  <ul dir="rtl" class="one-page-menu" >
+  <ul dir="rtl">
     <li><a href="{{site.baseurl}}/"><div>Home</div></a></li>
     <li><a href="{{site.baseurl}}/about"><div>About</div></a>
       <ul>
