--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -6,26 +6,7 @@
             <!-- Contact Form -->
             <div class="col_one_third">
                <div class="widget quick-contact-widget">
-
                     {% include contact_form.html%}
-                    <!-- Google+ badge -->
-                    <div style="margin-top: 15px" class="col_five_sixth">
-                        <!-- Facebook Badge -->
-                        <div id="fb-root"></div>
-                        <script>(function(d, s, id) {
-                          var js, fjs = d.getElementsByTagName(s)[0];
-                          if (d.getElementById(id)) return;
-                          js = d.createElement(s); js.id = id;
-                          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4";
-                          fjs.parentNode.insertBefore(js, fjs);
-                        }(document, 'script', 'facebook-jssdk'));</script>
-                        <div class="fb-like" data-href="https://www.facebook.com/KWmassage?ref=hl" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
-                    </div>
-                    <div class="col_one_sixth col_last nomargin">
-                        <a href="http://plus.google.com/112012689163682030613?prsrc=3" rel="publisher" target="_top" style="text-decoration:none;">
-                          <img src="{{site.baseurl}}/assets/images/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;">
-                        </a>
-                    </div>
                 </div>
             </div>
             <!-- End Contact Form -->
@@ -37,21 +18,24 @@
                     <img src="{{site.url}}/assets/images/Kitchener_massage_logo.png" alt="" class="alignleft" style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #4A4A4A;">
                     <div class="line" style="margin: 30px 0;"></div>               
                     
-                    <div class="col_one_third center">
-                        <!-- CMTO Badge -->
-                        <a href="http://www.cmto.com/" target="_blank" class="widget_sp_image-image-link" title="College of Massage Therapists of Ontario"><img width="200" height="105" alt="College of Massage Therapists of Ontario" class="attachment-200x105" style="max-width: 100%;" src="{{site.url}}/assets/images/cmto-logo.jpg"></a>
+                    <div class="col_one_third">
+                        <!-- Facebook Badge -->             
+                        <a href="https://www.facebook.com/KWmassage?ref=hl" class="social-icon si-dark si-facebook" data-action="like" data-show-faces="false" data-share="true">
+                            <i class="icon-facebook"></i>
+                            <i class="icon-facebook"></i>
+                        </a>
+                        <!-- Google+ badge -->
+                        <a href="http://plus.google.com/112012689163682030613?prsrc=3" class="social-icon si-dark si-gplus" title="Google Plus">
+                            <i class="icon-gplus"></i>
+                            <i class="icon-gplus"></i>
+                        </a>
                     </div>
                     
-                    <div style="margin-top: 7px" class="col_one_third center">  
-                        <!-- RMTAO link -->
-                        <a href="http://www.rmtao.com/home" target="_blank" class="widget_sp_image-image-link" title="Registered Massage Therapists Association of Ontario"><img width="211" height="97" alt="Registered Massage Therapists Association of Ontario" class="attachment-full" style="max-width: 100%;" src="{{site.url}}/assets/images/rmtao_logo_english_lead.gif"></a>
-                    </div>
-                    
-                    <div class="col_one_third col_last">
+                    <div class="col_one_third fright col_last">
                         <div style="text-align: right"class="widget subscribe-widget clearfix">
                             <h5 style="margin: 0">229 Frederick Street</h5>
                             <h5 style="margin: 0">Kitchener, Ontario</h5>
-                            <h5 style="margin: 0">Telephone: <strong>(519)745-4112</strong></h5>
+                            <!-- <h5 style="margin: 0">Telephone: <strong>(519)745-4112</strong></h5> -->
                             <h5 style="margin: 0">Email: <strong><a href="mailto:jeremy@kwmassage.com">jeremy@kwmassage.com</a></strong></h5>
                         </div>
                     </div>
