--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,8 +10,8 @@
 
     <!-- Page Title and content
     ============================================= -->
-    <section id="page-title" class="page-title-parallax" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); background-repeat: no-repeat; ">
-      <div class="content-wrap">
+    <section id="page-title" class="page-title-parallax notoppadding" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); background-repeat: no-repeat; ">
+      <div class="content-wrap  notopmargin">
         <div class="container clearfix notopmargin">
 
           <!-- Right Col -->
