--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -1,9 +1,9 @@
 <!-- Start Tabs -->
 
 <div class="container clearfix">             
-  <div class="tabs travel-organiser-tabs clearfix topmargin">
+  <div class="tabs travel-organiser-tabs">
   <!-- Tabs Nav-->
-    <ul class="tab-nav topmargin clearfix">
+    <ul style="max-width: 471px;" class="tab-nav topmargin clearfix">
       <li><a href="#tab-welcome"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Welcome</span><i class="icon-comment2"></i></a></li>
       <li class="hidden-lg hidden-md"><a href="#tab-picture"><i class="icon-line-head"></i></a></li>
       <li><a href="#tab-hours"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Hours</span><i class="icon-table"></i></a></li>
@@ -12,7 +12,7 @@
     </ul>
     <!-- Tabs Nav -->
     <!-- Tabs -->
-    <div class="tab-container">
+    <div style="max-width: 471px;" class="tab-container">
 
       <div dir="lft" class="tab-content clearfix center" id="tab-welcome">
         <div class="heading-block nobottomborder bottommargin-sm clearfix">
@@ -30,7 +30,9 @@
       </div>
 
       <div class="tab-content clearfix center hidden-lg hidden-md" id="tab-picture">          
-        <img class="center" src="{{site.url}}/assets/images/img_video.png">
+        <a href="http://youtube/XSRrvEXZSdk" data-lightbox="iframe">
+          <img class="center" src="{{site.url}}/assets/images/img_video.png">
+        </a>
       </div>
 
       <div dir="lft" class="tab-content clearfix" id="tab-hours">
