respomsive, hours rates xs xxs home

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -30,8 +30,8 @@
 
           <!-- Sidebar
           ============================================= -->
-          <div class="sidebar nobottommargin clearfix">
-            <div class="sidebar-widgets-wrap slider-caption-bg slider-caption-bg-light">
+          <div class="sidebar nobottommargin clearfix" data-class-sm="noleftpadding">
+            <div class="sidebar-widgets-wrap slider-caption-bg slider-caption-bg-light" data-class-lg="" data-class-md="" data-class-sm="rightmargin" data-class-xs="" data-class-xxs="">
 
               <div class="widget clearfix">
                 {% if page.post_id == 7 %}
