--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -25,7 +25,7 @@
 
 
 
-<section id="slider" class="slider-parallax full-screen clearfix" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover; " data-height-lg="650" data-height-md="650" data-height-sm="650" data-height-xs="300" data-height-xxs="250">
+<section id="slider" class="slider-parallax full-screen clearfix" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover; " data-height-lg="650" data-height-md="550" data-height-sm="550" data-height-xs="550" data-height-xxs="550">
   <div class="swiper-container">
     <div class="swiper-wrapper">
       
@@ -35,14 +35,14 @@
 
 
         <!-- Picture -->
-        <div class="slider-caption slider-caption-center leftmargin-lg notopmargin hidden-md hidden-sm hidden-xs hidden-xxs">
+        <div class="slider-caption slider-caption-center leftmargin-lg notopmargin hidden-sm hidden-xs hidden-xxs">
           <a href="http://youtube/XSRrvEXZSdk" data-lightbox="iframe">
             <img src="{{site.url}}/assets/images/img_video.png">.
           </a>
         </div>
         <!-- Picture -->
 
-        <div style="overflow: visable; " class="slider-caption slider-caption-right topmargin">
+        <div style="overflow: visable; " class="slider-caption slider-caption-right notopmargin">
         {% include tabs.html %}
         </div>
 
@@ -51,5 +51,3 @@
     </div>
   </div>
 </section>
-
-
