--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -52,7 +52,7 @@
         <div class="container clearfix">
             <div class="col_full nobottommargin center">
                 <div class="copyrights-menu copyright-links clearfix">
-                    <a href="#">Home</a>/<a href="#">About</a>/<a href="#">Clinic</a>/<a href="#">Appointments</a>/<a href="#">Contact</a>/<a href="#">Knowledge Center</a>
+                    <a href="{{site.url}}">Home</a>/<a href="{{site.url}}/about">About</a>/<a href="{{site.url}}/clinic">Clinic</a>/<a href="{{site.url}}/clinic-information">Appointments</a>/<a href="{{site.url}}//contact">Contact</a>/<a href="{{site.url}}/knowledge-centre/">Knowledge Center</a>
                 </div>
                 Copyrights &copy; 2015 All Rights Reserved by <strong>KWmassage</strong>
             </div>
