welcome video, alt/title tages on pages

--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -9,7 +9,7 @@
       <!-- Logo
       ============================================= -->
       <div id="logo">
-        <a href="/index.html" class="standard-logo"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
+        <a href="/index.html" title="Kitchener Massage Therapy Home Page" class="standard-logo"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist, logo"></a>
       </div>
       <!-- #logo end -->
 
@@ -36,13 +36,13 @@
 
         <!-- Picture -->
         <div class="slider-caption slider-caption-center leftmargin-lg notopmargin hidden-sm hidden-xs hidden-xxs">
-          <a href="http://youtube/XSRrvEXZSdk" data-lightbox="iframe">
-            <img src="{{site.url}}/assets/images/img_video.png">.
+          <a href="https://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
+            <img alt="Welcome video; Jeremy Bissonnette, Kitchner Massage Therapist" src="{{site.url}}/assets/images/picture_kitchener_massage_therapist.png">.
           </a>
         </div>
         <!-- Picture -->
 
-        <div style="overflow: visable; " class="slider-caption slider-caption-right notopmargin">
+        <div style="" class="slider-caption slider-caption-right notopmargin">
         {% include tabs.html %}
         </div>
 
