--- a/_includes/home_page_nav.html
+++ b/_includes/home_page_nav.html
@@ -4,20 +4,20 @@
 
   <ul dir="rtl" class="one-page-menu" >
     <li><a href="{{site.baseurl}}/"><div>Home</div></a></li>
-    <li><a href="{{site.baseurl}}/about"><div>About</div></a>
+    <li><a href="{{site.baseurl}}/about" title="Jeremy's bio and massage therapy background"><div>About</div></a>
       <ul>
         <li><a href="{{site.baseurl}}/about/testimonials"><div>Testimonials</div></a></li>
         <li><a href="{{site.baseurl}}/about/rock-climbing-as-a-lifestyle"><div>Rock Climbing as a Lifestyle</div></a></li>
         <li><a href="{{site.baseurl}}/about/welcome"><div>Welcome</div></a></li>
       </ul>
     </li>
-    <li><a href="{{site.baseurl}}/clinic-information"><div>Appointments</div></a>
+    <li><a href="{{site.baseurl}}/clinic-information" title="How to make a Massage Therapy Appointment"><div>Appointments</div></a>
       <ul>
         <li><a href="{{site.baseurl}}/clinic-information/note-to-new-massage-therapy-clients"><div>Note to New Clients</div></a></li>
       </ul>
     </li>
     <li><a href="{{site.baseurl}}/contact"><div>Contact</div></a></li>
-    <li><a href="{{site.baseurl}}/knowledge-centre"><div>Knowledge Centre</div></a>
+    <li><a href="{{site.baseurl}}/knowledge-centre" title="More articals about Registered Massage Therapy"><div>Knowledge Centre</div></a>
       <ul>
         <li><a href="{{site.baseurl}}/knowledge-centre/facts-about-registered-massage-therapy-in-ontario"><div>Facts</div></a></li>
         <li><a href="{{site.baseurl}}/knowledge-centre/general-massage-therapy"><div>General Massage Therapy</div></a></li>
