--- a/_includes/page_head.html
+++ b/_includes/page_head.html
@@ -1,7 +1,6 @@
 <head>
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="author" content="SemiColonWeb" />
 
   <!-- Stylesheets
   ============================================= -->
@@ -27,10 +26,15 @@
   <script type="text/javascript" src="{{site.url}}/js/jquery.js"></script>
   <script type="text/javascript" src="{{site.url}}/js/plugins.js"></script>
 
-    <!-- Document Title
-    ============================================= -->
-
+  <!-- Document Title
+  ============================================= -->
   <title>{% if page.title %}{{ "KWmassage | "}}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   
+  <!-- Meta Tags
+  ============================================= -->
+  <meta name="description" content="{% if page.excerpt_separator %}{{ page.excerpt_separator | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="keywords" content="{% if page.meta_keywords%}{{page.meta_keywords}}{% endif %}">
+  <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
+ 
 </head>
 
