--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -9,7 +9,7 @@
       <!-- Logo
       ============================================= -->
       <div id="logo">
-        <a href="/index.html" class="standard-logo" data-dark-logo="{{site.url}}/assets/images/logo_kitchener_massage.png"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
+        <a href="/index.html" title="Kitchener Massage Therapy Home Page"class="standard-logo" data-dark-logo="{{site.url}}/assets/images/logo_kitchener_massage.png"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist Logo"></a>
       </div>
       <!-- #logo end -->
 
