--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -30,8 +30,8 @@
       </div>
 
       <div class="tab-content clearfix center hidden-lg hidden-md" id="tab-picture">          
-        <a href="http://youtube/XSRrvEXZSdk" data-lightbox="iframe">
-          <img class="center" src="{{site.url}}/assets/images/img_video.png">
+        <a href="https://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
+          <img class="center" src="{{site.url}}/assets/images/picture_kitchener_massage_therapist.png" alt="Kitchener Massage Therapist, Picture">
         </a>
       </div>
 
