--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -15,17 +15,17 @@
             <div class="col_two_third col_last">
                 <div class="widget clearfix">
                     
-                    <img src="{{site.url}}/assets/images/Kitchener_massage_logo.png" alt="" class="alignleft" style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #4A4A4A;">
+                    <img src="{{site.url}}/assets/images/Kitchener_massage_logo.png" alt="Kitchener Registered Masage Therapist Logo Large" class="alignleft" style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #4A4A4A;">
                     <div class="line" style="margin: 30px 0;"></div>               
                     
                     <div class="col_one_third">
                         <!-- Facebook Badge -->             
-                        <a href="https://www.facebook.com/KWmassage?ref=hl" class="social-icon si-dark si-facebook" data-action="like" data-show-faces="false" data-share="true">
+                        <a href="https://www.facebook.com/KWmassage?ref=hl" title="Kitchener massage therapy facebook page" class="social-icon si-dark si-facebook" data-action="like" data-show-faces="false" data-share="true">
                             <i class="icon-facebook"></i>
                             <i class="icon-facebook"></i>
                         </a>
                         <!-- Google+ badge -->
-                        <a href="http://plus.google.com/112012689163682030613?prsrc=3" class="social-icon si-dark si-gplus" title="Google Plus">
+                        <a href="http://plus.google.com/112012689163682030613?prsrc=3" class="social-icon si-dark si-gplus" title="Kitchener massage therapy Google Plus page">
                             <i class="icon-gplus"></i>
                             <i class="icon-gplus"></i>
                         </a>
