--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -9,7 +9,7 @@
       <!-- Logo
       ============================================= -->
       <div id="logo">
-        <a href="/index.html" title="Kitchener Massage Therapy Home Page" class="standard-logo"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist, logo"></a>
+        <a href="{{site.url}}/index.html" title="Kitchener Massage Therapy Home Page" class="standard-logo"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist, logo"></a>
       </div>
       <!-- #logo end -->
 
