--- a/_includes/page_head.html
+++ b/_includes/page_head.html
@@ -5,15 +5,15 @@
   <!-- Stylesheets
   ============================================= -->
   <link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
-  <link rel="stylesheet" href="/style.css" type="text/css" />
-  <link rel="stylesheet" href="/css/dark.css" type="text/css" />
-  <link rel="stylesheet" href="/css/font-icons.css" type="text/css" />
-  <link rel="stylesheet" href="/css/animate.css" type="text/css" />
-  <link rel="stylesheet" href="/css/magnific-popup.css" type="text/css" />
-  <link rel="stylesheet" href="/css/responsive.css" type="text/css" />
-  <link rel="stylesheet" href="/css/colors.css" type="text/css" />
-  <link rel="stylesheet" href="/css/travel.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/style.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/css/dark.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/css/font-icons.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/css/animate.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/css/magnific-popup.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/css/responsive.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/css/colors.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/css/travel.css" type="text/css" />
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
