--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,7 +57,7 @@
     </div>
     <!-- Footer Scripts
     ============================================= -->
-    <script type="text/javascript" src="/js/functions.js"></script>
+    <script type="text/javascript" src="{{site.url}}/js/functions.js"></script>
 
   </body>
 </html>
