--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -9,7 +9,7 @@
       <!-- Logo
       ============================================= -->
       <div id="logo">
-        <a href="{{site.url}}/index.html" title="Kitchener Massage Therapy Home Page" class="standard-logo"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist, logo"></a>
+        <a href="{{site.url}}/index.html" title="Kitchener Massage Therapy Home Page" class="standard-logo" data-dark-logo="{{site.url}}/assets/images/logo_kitchener_massage.png"><img src="{{site.url}}/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist, logo"></a>
       </div>
       <!-- #logo end -->
 
@@ -21,8 +21,6 @@
   </div>  
 </header>
 <!-- #header end -->
-
-
 
 
 <section id="slider" class="slider-parallax full-screen clearfix" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover; " data-height-lg="650" data-height-md="550" data-height-sm="550" data-height-xs="550" data-height-xxs="550">
