--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2154,7 +2154,7 @@ only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
 
-	#logo a.standard-logo { display: none; }
+	/*#logo a.standard-logo { display: none; }*/
 	#logo a.retina-logo { display: block; }
 
 	.owl-carousel.owl-loading,
@@ -2209,6 +2209,6 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) and (max-width: 991px),
 only screen and (        min-device-pixel-ratio: 2) and (max-width: 991px),
 only screen and (                min-resolution: 192dpi) and (max-width: 991px),
 only screen and (                min-resolution: 2dppx) and (max-width: 991px) {
-	#logo a.standard-logo { display: none; }
+	/*#logo a.standard-logo { display: none; }*/
 	#logo a.retina-logo { display: inline-block; }
 }
