testimonial video center

--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -23,14 +23,11 @@
 <!-- #header end -->
 
 
-<section id="slider" class="slider-parallax full-screen clearfix" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover; " data-height-lg="650" data-height-md="550" data-height-sm="550" data-height-xs="550" data-height-xxs="550">
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      
+<section id="slider" class="slider-parallax swiper-wrapper full-screen clearfix" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover; transform: none;" data-height-lg="650" data-height-md="550" data-height-sm="550" data-height-xs="550" data-height-xxs="550">
+  <div class="swiper-container" >
+
       <!--First Slide-->
-      <div class="swiper-slide">
-
-
+      <div class="nivoSlider">
 
         <!-- Picture -->
         <div class="slider-caption slider-caption-center leftmargin-lg notopmargin hidden-sm hidden-xs hidden-xxs">
@@ -45,7 +42,5 @@
         </div>
 
       </div>
-
-    </div>
   </div>
 </section>
